welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:5: error: Boolean does not take parameters
      forward()
             ^